* ltmain.in: Place parens around a generated relink_command so it is run is a subshell. This avoids an install error where libtool ended up in the wrong directory after relinking a .la file.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2513,7 +2513,7 @@ EOF
 		  echo "*** Warning: dynamic linker does not accept needed library $i."
 		  echo "*** I have the capability to make that library automatically link in when"
 		  echo "*** you link to this library.  But I can only do this if you have a"
-		  echo "*** shared version of the library, which I believe you do not have" 
+		  echo "*** shared version of the library, which I believe you do not have"
 		  echo "*** because a test_compile did reveal that the linker did not use it for"
 		  echo "*** its dynamic dependency list that programs get resolved with at runtime."
 		fi
@@ -3555,7 +3555,7 @@ static const void *lt_preloaded_setup() {
 	    relink_command="$var=\"$var_value\"; export $var; $relink_command"
 	  fi
 	done
-	relink_command="cd `pwd`; $relink_command"
+	relink_command="(cd `pwd`; $relink_command)"
 	relink_command=`$echo "X$relink_command" | $Xsed -e "$sed_quote_subst"`
       fi
 
@@ -3885,7 +3885,7 @@ fi\
 	fi
       done
       # Quote the link command for shipping.
-      relink_command="cd `pwd`; $SHELL $0 --mode=relink $libtool_args"
+      relink_command="(cd `pwd`; $SHELL $0 --mode=relink $libtool_args)"
       relink_command=`$echo "X$relink_command" | $Xsed -e "$sed_quote_subst"`
 
       # Only create the output if not a dry run.
