--- a/depdemo/configure.ac
+++ b/depdemo/configure.ac
@@ -47,11 +47,12 @@ AM_INIT_AUTOMAKE(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
 ## compiler checks. ##
 ## ---------------- ##
 AC_PROG_CC
-
+AC_EXEEXT
 
 ## ----------------------- ##
 ## Libtool initialisation. ##
 ## ----------------------- ##
+AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 AC_SUBST([LIBTOOL_DEPS])
 
