* ltmain.in: Fix a problem on SCO OpenServer5 that caused a failure in three depdemo-make tests. For some reason the linker tries to find the dependent libraries using the library search path before it has read the libraries specified with absolute paths in the full commandline. This patch add -L's for each of the dependent library directories so that they can be resolved.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2174,6 +2174,9 @@ EOF
 	    case $hardcode_action in
 	    immediate | unsupported)
 	      if test "$hardcode_direct" = no; then
+		case $host in
+		  *-*-sco3.2v5* ) add_dir="-L$dir" ;;
+		esac
 		add="$dir/$linklib"
 	      elif test "$hardcode_minus_L" = no; then
 		case $host in
