* libtool.m4 (osf[345]): Append $major to soname_spec. Reflect this in library_names_spec. * ltmain.in (osf): Prefix $major with '.' for use as extension.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2323,7 +2323,7 @@ compiler."
 	  ;;
 
 	osf)
-	  major=`expr $current - $age`
+	  major=.`expr $current - $age`
 	  versuffix=".$current.$age.$revision"
 	  verstring="$current.$age.$revision"
 
