* libtool.m4 (aix): When LDFLAGS="-Wl,-brtl,[other options]", the "-brtl" special-case code for AIX never gets triggered because were are being too specific about how we search for "-brtl".  Use case statement to avoid this. Remove extraneous semicolon. * ltmain.in: Recognize the IBM xlc compiler family.

--- a/ltmain.in
+++ b/ltmain.in
@@ -226,7 +226,7 @@ if test -z "$show_help"; then
   # Infer the operation mode.
   if test -z "$mode"; then
     case $nonopt in
-    *cc | *++ | gcc* | *-gcc*)
+    *cc | *++ | gcc* | *-gcc* | xlc*)
       mode=link
       for arg
       do
