--- a/ltmain.in
+++ b/ltmain.in
@@ -114,6 +114,40 @@ execute_dlfiles=
 lo2o="s/\\.lo\$/.${objext}/"
 o2lo="s/\\.${objext}\$/.lo/"
 
+#####################################
+# Shell function definitions:
+# This seems to be the best place for them
+
+# Need a lot of goo to handle *both* DLLs and import libs
+# Has to be a shell function in order to 'eat' the argument 
+# that is supplied when $file_magic_command is called.
+win32_libid () {
+  win32_libid_type="unknown"
+  if eval $OBJDUMP -f $1 2>/dev/null | \
+     grep -E 'file format pei+-i386(.*architecture: i386)?' >/dev/null ; then
+    win32_libid_type="x86 DLL"
+  else
+    if eval $OBJDUMP -f $1 2>/dev/null | \
+      grep -E 'file format pei*-i386(.*architecture: i386)?' >/dev/null ; then
+      win32_libid_type="x86"
+      if eval file $1 2>/dev/null | \
+         grep -E 'ar archive' >/dev/null; then
+        win32_libid_type="$win32_libid_type archive"
+        if eval $NM -f posix -A $1 | awk '{print $3}' | grep "I" >/dev/null ; then
+          win32_libid_type="$win32_libid_type import"
+        else
+          win32_libid_type="$win32_libid_type static"
+        fi
+      fi
+    fi
+  fi
+  echo $win32_libid_type
+}
+
+# End of Shell function definitions
+#####################################
+
+
 # Parse our command line options once, thoroughly.
 while test "$#" -gt 0
 do
