ltmain.in: Revert the version +1 change for IRIX, it could cause compatibility problems.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2793,7 +2793,7 @@ EOF
 	  ;;
 
 	irix | nonstopux)
-	  major=`expr $current - $age`
+	  major=`expr $current - $age +1`
 
 	  case $version_type in
 	    nonstopux) verstring_prefix=nonstopux ;;
