Rework by Robert Boehne <rboehne@gnu.org> * ltmain.in: New link option -shrext. * libtool.m4 (AC_LIBTOOL_CONFIG): New libtool variable shrext. (AC_LIBTOOL_SYS_DYNAMIC_LINKER): Replace all hard coded shared library file name extensions in library_names_spec and soname_spec with $shrext. * doc/libtool.texi (Link mode): Document it.

--- a/ltmain.in
+++ b/ltmain.in
@@ -1306,6 +1306,11 @@ EOF
         continue
         ;;
 
+      -shrext)
+	prev=shrext
+	continue
+	;;
+
       -no-fast-install)
 	fast_install=no
 	continue
